--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ url: "" # the base hostname & protocol for your site
 author: Jorge M.G.
 
 # Gems
-gems: [jekyll-paginate]
+gems: [jekyll-paginate, rouge]
 
 # Build settings
 markdown: kramdown
