--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 header_pages:
   - index.md
-  - about.md
+  - pages/about.md
 
 #footer: 'follow us on <a href="https://twitter.com/">twitter</a>'
 
